--- a/Backend/A3-API/.env.example
+++ b/Backend/A3-API/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=A3-WEBAPI
+APP_NAME=A3API
 APP_ENV=local
-APP_KEY=base64:XARJzgaDKaIPBO1Wonca3ejUULsea5JcKpPb6tn7+n8=
+APP_KEY=base64:6QzTYtit9+stQwQnqyVqlrn7uY9aRcYV4qyTXHpKY78=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=bd_a3
+DB_DATABASE=bd_a3_api
 DB_USERNAME=root
 DB_PASSWORD=root
 
